# waterllmarks

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix  test.py  tests.ipynb  tests_langchain_bkp.ipynb
notebooks/: automated_eval.py  icdcs_2015.ipynb  parallelism.ipynb  test_langchain_api.ipynb  test_rag.ipynb  waterllmark.ipynb  waterllmarks.ipynb
notebooks/icdcs_2025/: analysis.ipynb  run.ipynb
notebooks/icdcs_2025/results/: 1138_baseline_results_noempty.pkl  1138_wllmk_results.pkl  1977_baseline_results_noempty.pkl
notebooks/results/: 1138_baseline_results.synthesis  1138_wllmk_results.pkl
waterllmarks/: __init__.py  datasets.py  evaluation.py  interface.py  pipeline.py  watermaks.py  watermarks.py
waterllmarks/tests/: test_metrics.py  test_pipeline.py  test_watermarks.py
