[project]
name = "waterllmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.0.0",
    "datasets>=3.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.14",
    "openai>=1.59.5",
    "pydantic>=2.10.5",
    "pytest>=8.3.4",
    "ragas>=0.2.10",
    "rapidfuzz>=3.11.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "siphash>=0.0.1",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
select = ["D"]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["waterllmarks"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "target"

